  14 Nov 2020; Manuel Friedli <manuel@gentoo.org> reposilite-2.9.4.ebuild:
  dev-util/reposilite: Fixes #67

*reposilite-2.9.4 (14 Nov 2020)

  14 Nov 2020; Manuel Friedli <manuel@gentoo.org> +files/reposilite-2.9.4.cdn,
  +reposilite-2.9.4.ebuild, files/reposilite.service:
  dev-util/reposilite: Fixes #66

  08 Oct 2020; Manuel Friedli <manuel@gentoo.org> files/reposilite-2.9.1.cdn,
  files/reposilite.sh, reposilite-2.9.1.ebuild:
  dev-util/reposilite: Apply some fixes

*reposilite-2.9.1 (08 Oct 2020)

  08 Oct 2020; Manuel Friedli <manuel@gentoo.org> +files/app.ini,
  +files/reposilite-2.9.1.cdn, +files/reposilite.service, +files/reposilite.sh,
  +metadata.xml, +reposilite-2.9.1.ebuild:
  dev-util/reposilite: Add untested ebuild for version 2.9.1