@@ -5,5 +5,6 @@ AUX reposilite.service 578 BLAKE2B 972c0743bc6099a1ef95606e8e62351b1de267a7d2dcb
 AUX reposilite.sh 744 BLAKE2B 524b3120b59b60c01e65654e4c7bf34d359e61b29f0e31a4762fda179c7b61ac91bea91ffb1c9d5d0470e0ae3683cad8ff32086125946c42b08a9fd156f65f10 SHA512 c781849ae3c116179ee3446ccf8620814514e4128df6cad917a010ffaba9efdd6cddda686a77ef348b80a920cd67b7ba19bc2a62c519ca7a795acdc8cc486c50
 EBUILD reposilite-2.9.1.ebuild 953 BLAKE2B 77a1a44119f5a5fe4e012c0d6f6fbc526ee1466b076ac20653b9c09953141242c1f1f04cc22960de7944f679a5264679df602f369daef159958d8267630e1034 SHA512 44989aa39d1a89d77f5c196b69bafe8397c95f8b59ba5654ebbb1d69981c6d0679b44e0613dd5cd2a8c5812b84f6ea9339c2d2ec5b4c4879b728be480284e9f0
 EBUILD reposilite-2.9.4.ebuild 954 BLAKE2B f43304db919fb8a162c6614b932a718bf8b2ad57d43a0c2dbe33a197f3cf112ad1ceb26573ba5e635961720391d1a266f4be6f897beeac51b00c85e4dc5f5f64 SHA512 3be1ed2eda1c5d7b03c1ad53ae617a24bb66746aaeb2b75f56c26081027503cfe1e18aa6ca2ca5aca94a73bcc0a1ccc711f6c2a7686d3b314a3d67bb9db2b62f
-MISC ChangeLog 759 BLAKE2B fd0e088c4cc1a63e1ad2e4ee02c75543609f857327f441e4809a73b30853716be41f469ad4564421f6df434296c3ab39160172d04a810c846852feb8dd879cb2 SHA512 956a761b89c2215cfc3148072f67c815f4f7cf68ef8b72e4663c01f9235ca2b11c570a2e18760dbf29dc126000a21baf72fa4b5a3364698cd55991b778bf6e4d
+EBUILD reposilite-2.9.6.ebuild 954 BLAKE2B f43304db919fb8a162c6614b932a718bf8b2ad57d43a0c2dbe33a197f3cf112ad1ceb26573ba5e635961720391d1a266f4be6f897beeac51b00c85e4dc5f5f64 SHA512 3be1ed2eda1c5d7b03c1ad53ae617a24bb66746aaeb2b75f56c26081027503cfe1e18aa6ca2ca5aca94a73bcc0a1ccc711f6c2a7686d3b314a3d67bb9db2b62f
+MISC ChangeLog 910 BLAKE2B d173ea3bc04d3a455af3893f914596b41f2bd644787745ae70ef8fbaa1d0958a56b3edddb49a7b4ffe5b1ecec4b44e8c1803e6d0bd71a251497426bc7fb8931f SHA512 69174a39b3b96f124c3a07c5f4ce038684347ffff31edc59ff1ab1983e73d5d02467f2ecf7d2d9fcfccd144faf38553dbbf12456a76c99892e90ca505010522f
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
