@@ -1,3 +1,8 @@
+*reposilite-2.9.6 (24 Nov 2020)
+
+  24 Nov 2020; Manuel Friedli <manuel@gentoo.org> +reposilite-2.9.6.ebuild:
+  dev-util/reposilite: Add version 2.9.6
+
   14 Nov 2020; Manuel Friedli <manuel@gentoo.org> reposilite-2.9.4.ebuild:
   dev-util/reposilite: Fixes #67
 
